// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createTSProtoFileContent should generate result given empty proto 1`] = `
"import { fromJSON } from '@grpc/proto-loader';
export default fromJSON({}, {});"
`;

exports[`#createTSProtoFileContent should generate result given no options passed 1`] = `
"import { fromJSON } from '@grpc/proto-loader';
export default fromJSON({
  \\"nested\\": {
    \\"Test0Response\\": {
      \\"fields\\": {
        \\"details\\": {
          \\"type\\": \\"Test0Details\\",
          \\"id\\": 1
        }
      }
    },
    \\"Test0Details\\": {
      \\"fields\\": {
        \\"id\\": {
          \\"type\\": \\"int32\\",
          \\"id\\": 1
        },
        \\"field0\\": {
          \\"type\\": \\"string\\",
          \\"id\\": 2
        }
      }
    }
  }
}, undefined);"
`;

exports[`#createTSProtoFileContent should generate result given valid proto passed with options 1`] = `
"import { fromJSON } from '@grpc/proto-loader';
export default fromJSON({
  \\"nested\\": {
    \\"Test0Response\\": {
      \\"fields\\": {
        \\"details\\": {
          \\"type\\": \\"Test0Details\\",
          \\"id\\": 1
        }
      }
    },
    \\"Test0Details\\": {
      \\"fields\\": {
        \\"id\\": {
          \\"type\\": \\"int32\\",
          \\"id\\": 1
        },
        \\"field0\\": {
          \\"type\\": \\"string\\",
          \\"id\\": 2
        }
      }
    }
  }
}, {
  \\"arrays\\": true
});"
`;

exports[`#createTSProtoFileContent should throw error given content is not valid proto 1`] = `"illegal token 'not' (line 1)"`;

exports[`#createTSProtoFileContent should throw error given unknown syntax is passed 1`] = `"illegal syntax 'unknown' (line 1)"`;
